# fizzix

./: Algorithm.md  CPCdiagram.xmi  CRCdiagram.xmi  Designs.md  FunctionalSpec.md  Install.md  Planning_Discussion.md  ProjectHome.md  README.md  Screenshots.md  local_libfizzix_compile.sh  local_mac_compile.sh
fizzix/: fileheader.txt  fizzix.pro  fizzix.qrc  local_fizzix.pro  mac_fizzix.pro
fizzix/data/: default.xml  orbit.xml  slingshot.xml  springexample.xml  torque2.xml  whee.xml
fizzix/data/man/: manual.html
fizzix/src/: DrawableObject.h  GLdrawpane.cpp  GLdrawpane.h  availablesymbols.cpp  availablesymbols.h  buttonpanel.cpp  buttonpanel.h  constanteditor.cpp  constanteditor.h  databrowser.cpp  databrowser.h  dataeditor.cpp  dataeditor.h  drawableobject.cpp  drawableobject.h  editpropertydialog.cpp  editpropertydialog.h  forceeditor.cpp  forceeditor.h  forcepanel.cpp  forcepanel.h  formulaeditor.cpp  formulaeditor.h  macropanel.cpp  macropanel.h  main.cpp  mainwindow.cpp  mainwindow.h  objecteditor.cpp  objecteditor.h  objectpanel.cpp  objectpanel.h  propertylisteditor.cpp  propertylisteditor.h  propertypanel.cpp  propertypanel.h  shapeeditor.cpp  shapeeditor.h  simulationcontrol.cpp  simulationcontrol.h
fizzix/src/databackend/: changefactory.cpp  changefactory.h  databackend.cpp  databackend.h  drawableobject.cpp  drawableobject.h  mapkeylistmodel.h  maputil.h  parser.h  stepengine.cpp  stepengine.h
libfizzix/: Makefile.am  Makefile.in  aclocal.m4  classtemplate.txt  configure  configure.ac  fileheader.txt  libfizzix.pc  libfizzix.pc.in  libfizzix.pro  libtool
libfizzix/cxxtest/: CXXTEST_INSTALL.txt
libfizzix/cxxtest/testtester/: fizformulatests.h  fizobjecttests.h  simpletest.cpp
libfizzix/include/: Makefile  Makefile.am  Makefile.in
libfizzix/include/libfizzix/: Makefile  Makefile.am  Makefile.in  fizengine.h  fizforce.h  fizformanonconst.h  fizformnode.h  fizformoperator.h  fizformula.h  fizformvariable.h  fizobject.h  gen_structs.h  operators.h
libfizzix/libfizzix/: Makefile.am  Makefile.in  fizcylinder.cpp  fizcylinder.h  fizengine.cpp  fizengine.h  fizforce.cpp  fizforce.h  fizformanonconst.cpp  fizformanonconst.h  fizformget.cpp  fizformget.h  fizformgetconst.cpp  fizformgetforce.cpp  fizformgetmacro.cpp  fizformgetprop.cpp  fizformnode.cpp  fizformnode.h  fizformoperator.h  fizformula.cpp  fizformula.h  fizobject.cpp  fizobject.h  fizprism.cpp  fizprism.h  fizsphere.cpp  fizsphere.h  fizstack.h  gen_structs.cpp  gen_structs.h  getters.h  matrix.h  quaternion.cpp  quaternion.h
libfizzix/libfizzix/fizformoperators/: Makefile.am  Makefile.in  and.cpp  arccos.cpp  arcsin.cpp  arctan.cpp  cosh.cpp  cosine.cpp  cross.cpp  difference.cpp  dot.cpp  equal.cpp  exponent.cpp  exponentiate.cpp  factorial.cpp  greater.cpp  greatereq.cpp  if.cpp  less.cpp  lesseq.cpp  logarithm.cpp  magnitude.cpp  notequal.cpp  operators.h  or.cpp  product.cpp  quotient.cpp  random.cpp  sine.cpp  sinh.cpp  square.cpp  sum.cpp  tangent.cpp  tanh.cpp  template.cpp  vectorize.cpp
libfizzix/src/: Makefile.am  Makefile.in  fizcylinder.cpp  fizengine.cpp  fizengine.h  fizforce.cpp  fizforce.h  fizformanonconst.cpp  fizformanonconst.h  fizformget.cpp  fizformgetconst.cpp  fizformgetconst.h  fizformgetforce.cpp  fizformgetforce.h  fizformgetmacro.cpp  fizformgetmacro.h  fizformnode.cpp  fizformnode.h  fizformoperator.h  fizformula.cpp  fizformula.h  fizformvariable.cpp  fizformvariable.h  fizobject.cpp  fizobject.h  fizsphere.h  gen_structs.cpp  gen_structs.h  geometricshapes.h  getters.h  quaternion.cpp  quaternion.h
libfizzix/src/fizformoperators/: Makefile.am  Makefile.in  arccos.cpp  arcsin.cpp  arctan.cpp  cosh.cpp  cosine.cpp  cross.cpp  diff.cpp  difference.cpp  dot.cpp  exponent.cpp  exponentiate.cpp  factorial.cpp  greater.cpp  greatereq.cpp  if.cpp  lesseq.cpp  logarithm.cpp  magnitude.cpp  notequal.cpp  operators.h  product.cpp  quotient.cpp  random.cpp  sine.cpp  sinh.cpp  square.cpp  sum.cpp  tangent.cpp  tanh.cpp  template.cpp  vectorize.cpp
libfizzix/src/testlib/: tester.cpp  tester.h
libfizzix/src/tests/: tests.compile.index  tests.include.index
libfizzix/tester/: Makefile.am  codetest.h  configure.ac
libfizzix/testlib/: tester.h  testermain.cpp
libfizzix/tests/: Makefile.am  howto.txt  testertest.test  tests.compile.index  tests.include.index
