INCLUDES =

AM_CXXFLAGS = \
	 -Wall

lib_LTLIBRARIES = libfizzix.la

libfizzix_la_SOURCES = \
	fizformula.cpp \
	fizformvariable.cpp \
	fizobject.cpp \
	quaternion.cpp \
	fizformanonconst.cpp \
	gen_structs.cpp \
	fizformoperators/arccos.cpp \
	fizformoperators/arctan.cpp \
	fizformoperators/cosine.cpp \
	fizformoperators/difference.cpp \
	fizformoperators/exponent.cpp   \
	fizformoperators/factorial.cpp \
	fizformoperators/magnitude.cpp \
	pfizformoperators/roduct.cpp \
	fizformoperators/random.cpp \
	fizformoperators/sinh.cpp  \
	fizformoperators/sum.cpp   \
	fizformoperators/tanh.cpp   \
	fizformoperators/vectorize.cpp \
	fizformoperators/arcsin.cpp \
	fizformoperators/cosh.cpp  \
	fizformoperators/cross.cpp  \
	fizformoperators/dot.cpp    \
	fizformoperators/exponentiate.cpp \
	fizformoperators/logarithm.cpp \
	fizformoperators/quotient.cpp \
	fizformoperators/sine.cpp  \
	fizformoperators/square.cpp \
	fizformoperators/tangent.cpp \
	fizformoperators/template.cpp

libfizzix_la_LDFLAGS = 

libfizzix_la_LIBADD = 