libfizzix_includedir = $(pkgincludedir)

libfizzix_include_DATA = \
	fizengine.h \
	fizformanonconst.h \
	fizformnode.h \
	fizformoperator.h \
	fizformula.h \
	fizformvariable.h \
	fizobject.h \
	fizstack.h \
	gen_structs.h \
	matrix.h \
	operators.h \
	quaternion.h

EXTRA_DIST = $(libfizzix_include_DATA)
