noinst_LTLIBRARIES = libfizformoperators.la
fizzixops_includedir=$(includedir)/libfizzix/fizformoperators/

#The following will be installed in /usr/local/libfizzix/fizformoperators by default.
fizzixops_include_HEADERS= \
operators.h

#Everything that gets compiled.
libfizformoperators_la_SOURCES = \
and.cpp \
or.cpp \
equal.cpp \
notequal.cpp \
greater.cpp \
greatereq.cpp \
less.cpp \
lesseq.cpp\
arccos.cpp \
cosh.cpp  \
difference.cpp \
exponentiate.cpp \
magnitude.cpp \
product.cpp \
sine.cpp  \
sum.cpp   \
arcsin.cpp \
cosine.cpp \
dot.cpp   \
factorial.cpp  \
quotient.cpp \
sinh.cpp  \
tangent.cpp \
vectorize.cpp \
arctan.cpp \
cross.cpp \
exponent.cpp  \
logarithm.cpp  \
operators.h  \
random.cpp  \
square.cpp \
tanh.cpp \
if.cpp



 
