noinst_LTLIBRARIES = libfizformoperators.la
fizzixops_includedir=$(includedir)/trashlib/fizformoperators/

#The following will be installed in /usr/local/libfizzix/fizformoperators by default.
fizzixops_include_HEADERS= \
operators.h

#Everything that gets compiled.
libfizformoperators_la_SOURCES = \
arccos.cpp \
cosh.cpp  \
difference.cpp \
exponentiate.cpp \
magnitude.cpp \
product.cpp \
sine.cpp  \
sum.cpp   \
template.cpp \
arcsin.cpp \
cosine.cpp \
dot.cpp   \
factorial.cpp  \
quotient.cpp \
sinh.cpp  \
tangent.cpp \
vectorize.cpp \
arctan.cpp \
cross.cpp \
exponent.cpp  \
logarithm.cpp  \
operators.h  \
random.cpp  \
square.cpp \
tanh.cpp



 
